fix: table layout on mobile devices #139

--- a/src/components/WordsListItem/WordsListItem.css
+++ b/src/components/WordsListItem/WordsListItem.css
@@ -27,6 +27,11 @@
 	visibility: hidden;
 }
 
+.WordsListItem__tableWrapper {
+	width: auto;
+	overflow-x: scroll;
+}
+
 .WordsListItem__listItem:hover .WordsListItem__delete {
 	visibility: visible;
 }
